@@ -4,35 +4,37 @@ import com.ardc.arkdust.Utils;
 import com.ardc.arkdust.helper.DirectionAndRotationHelper;
 import com.ardc.arkdust.helper.ListAndMapHelper;
 import com.ardc.arkdust.helper.PosHelper;
-import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.datafixers.util.Pair;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.Blocks;
-import net.minecraft.block.JigsawBlock;
-import net.minecraft.command.arguments.BlockStateParser;
-import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.state.properties.BlockStateProperties;
-import net.minecraft.state.properties.StructureMode;
-import net.minecraft.tileentity.JigsawTileEntity;
-import net.minecraft.util.Direction;
-import net.minecraft.util.Mirror;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.Rotation;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.ChunkPos;
-import net.minecraft.util.math.MutableBoundingBox;
-import net.minecraft.world.ISeedReader;
-import net.minecraft.world.IServerWorld;
-import net.minecraft.world.gen.ChunkGenerator;
-import net.minecraft.world.gen.feature.jigsaw.JigsawOrientation;
-import net.minecraft.world.gen.feature.structure.IStructurePieceType;
-import net.minecraft.world.gen.feature.structure.StructureManager;
-import net.minecraft.world.gen.feature.structure.TemplateStructurePiece;
-import net.minecraft.world.gen.feature.template.BlockIgnoreStructureProcessor;
-import net.minecraft.world.gen.feature.template.PlacementSettings;
-import net.minecraft.world.gen.feature.template.Template;
-import net.minecraft.world.gen.feature.template.TemplateManager;
+import net.minecraft.commands.arguments.blocks.BlockStateParser;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.core.FrontAndTop;
+import net.minecraft.core.registries.Registries;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.level.ChunkPos;
+import net.minecraft.world.level.ServerLevelAccessor;
+import net.minecraft.world.level.StructureManager;
+import net.minecraft.world.level.WorldGenLevel;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.Mirror;
+import net.minecraft.world.level.block.Rotation;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.minecraft.world.level.block.state.properties.StructureMode;
+import net.minecraft.world.level.chunk.ChunkGenerator;
+import net.minecraft.world.level.levelgen.LegacyRandomSource;
+import net.minecraft.world.level.levelgen.structure.BoundingBox;
+import net.minecraft.world.level.levelgen.structure.TemplateStructurePiece;
+import net.minecraft.world.level.levelgen.structure.pieces.StructurePieceSerializationContext;
+import net.minecraft.world.level.levelgen.structure.pieces.StructurePieceType;
+import net.minecraft.world.level.levelgen.structure.pieces.StructurePiecesBuilder;
+import net.minecraft.world.level.levelgen.structure.templatesystem.BlockIgnoreProcessor;
+import net.minecraft.world.level.levelgen.structure.templatesystem.StructurePlaceSettings;
+import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate;
+import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplateManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.*;
@@ -49,15 +51,17 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
     public boolean start;
     public String generateFromKey;
     public MapNecessityTemJigsawPieceElement key2ElementMap;
-    public Map<ChunkPos,List<MutableBoundingBox>> boundingBoxMap;
+    public Map<ChunkPos,List<BoundingBox>> boundingBoxMap;
     public boolean skipSpecialPieceManager = false;//跳过特殊片处理，此变量应该在special piece manager处使用
-    public AATemJigsawPiece(IStructurePieceType iStructurePieceType, TemplateManager templateManager, ResourceLocation structurePlace, BlockPos addPos, Rotation rotation, BlockPos rotationPivotPoint, int growth,BlockPos ignorePos,MapNecessityTemJigsawPieceElement k2eMap,Map<ChunkPos,List<MutableBoundingBox>> bbMap,String generateFromKey) {
-        super(iStructurePieceType, 3);
+
+    private static final StructurePlaceSettings EMPTY = new StructurePlaceSettings();
+    public AATemJigsawPiece(StructurePieceType iStructurePieceType, StructureTemplateManager templateManager, ResourceLocation structurePlace, BlockPos addPos, Rotation rotation, BlockPos rotationPivotPoint, int growth, BlockPos ignorePos, MapNecessityTemJigsawPieceElement k2eMap, Map<ChunkPos,List<BoundingBox>> bbMap, String generateFromKey) {
+        super(iStructurePieceType, 3,templateManager,structurePlace,structurePlace.toString(),EMPTY,addPos);
         this.templateLocation = structurePlace;
         this.templatePosition = addPos;
         this.rotation = rotation;
         this.rotationPivotPos = rotationPivotPoint;
-        this.loadTemplate(templateManager);
+        this.setup();
         this.growth = growth;
         this.ignorePos = ignorePos;
         this.key2ElementMap = k2eMap;
@@ -70,27 +74,26 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
         this.generateFromKey = generateFromKey;
 
     }
-    protected void addAdditionalSaveData(CompoundNBT nbt) {
-        super.addAdditionalSaveData(nbt);
+    protected void addAdditionalSaveData(StructurePieceSerializationContext context, CompoundTag nbt) {
+        super.addAdditionalSaveData(context,nbt);
         nbt.putString("Template", this.templateLocation.toString());
         nbt.putString("Rot", this.rotation.name());
         nbt.putLong("Pivot",this.rotationPivotPos.asLong());
         nbt.putLong("Ignore",this.ignorePos.asLong());
         nbt.putInt("Growth",this.growth);
     }
-    public AATemJigsawPiece(IStructurePieceType iStructurePieceType, TemplateManager templateManager, CompoundNBT nbt) {
-        super(iStructurePieceType, nbt);
+    public AATemJigsawPiece(StructurePieceType iStructurePieceType, StructureTemplateManager templateManager, CompoundTag nbt) {
+        super(iStructurePieceType, nbt,templateManager,(r)->EMPTY);
         this.templateLocation = new ResourceLocation(nbt.getString("Template"));
         this.rotation = Rotation.valueOf(nbt.getString("Rot"));
         this.rotationPivotPos = BlockPos.of(nbt.getLong("Pivot"));
         this.ignorePos = BlockPos.of(nbt.getLong("Ignore"));
         this.growth = nbt.getInt("Growth");
-        this.loadTemplate(templateManager);
+        this.setup();
     }
-    public void loadTemplate(TemplateManager templateManager) {
-        Template template = key2ElementMap!=null ? key2ElementMap.getTemplate(templateManager, this.templateLocation) : templateManager.getOrCreate(templateLocation);
-        PlacementSettings placementsettings = getSpecialSettingMap().getOrDefault(this.templateLocation,getPlacementSetting());
-        this.setup(template, this.templatePosition, placementsettings);
+    public void setup() {
+        this.placeSettings = getSpecialSettingMap().getOrDefault(this.templateLocation,getPlacementSetting());
+        this.boundingBox = template.getBoundingBox(placeSettings,templatePosition);
     }
     public void clearMap(){
         this.boundingBoxMap = null;
@@ -98,18 +101,18 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
     }
 
     //获取模板内所有拼图方块信息
-    public List<Template.BlockInfo> getJigsawBlocksInfo(){
+    public List<StructureTemplate.StructureBlockInfo> getJigsawBlocksInfo(){
         return this.template.filterBlocks(this.templatePosition, this.placeSettings, Blocks.JIGSAW);
     }
 
     //获取拼图方块的平面方向
-    public Direction getJigsawInfoHorizonDirection(Template.BlockInfo info){
-        return info.state.getValue(BlockStateProperties.ORIENTATION).front().getAxis() != Direction.Axis.Y ? info.state.getValue(BlockStateProperties.ORIENTATION).front() : info.state.getValue(BlockStateProperties.ORIENTATION).top();
+    public Direction getJigsawInfoHorizonDirection(StructureTemplate.StructureBlockInfo info){
+        return info.state().getValue(BlockStateProperties.ORIENTATION).front().getAxis() != Direction.Axis.Y ? info.state().getValue(BlockStateProperties.ORIENTATION).front() : info.state().getValue(BlockStateProperties.ORIENTATION).top();
     }
 
-    public Rotation getJigsawInfoRotation(Template.BlockInfo infoTo,Template.BlockInfo infoFrom,Rotation fallback){
-        JigsawOrientation to = infoTo.state.getValue(BlockStateProperties.ORIENTATION);
-        JigsawOrientation from = infoFrom.state.getValue(BlockStateProperties.ORIENTATION);
+    public Rotation getJigsawInfoRotation(StructureTemplate.StructureBlockInfo infoTo,StructureTemplate.StructureBlockInfo infoFrom,Rotation fallback){
+        FrontAndTop to = infoTo.state().getValue(BlockStateProperties.ORIENTATION);
+        FrontAndTop from = infoFrom.state().getValue(BlockStateProperties.ORIENTATION);
         if (to.front().getAxis().equals(Direction.Axis.Y) && from.front().getAxis().equals(Direction.Axis.Y)){
 //            if(from.front().getAxisDirection() != to.front().getAxisDirection()) return isJigsawBlockRollable(infoFrom) ? fallback : DirectionAndRotationHelper.direction2Rotation(from.top(),to.top());
             if(from.front().getAxisDirection() != to.front().getAxisDirection()) return DirectionAndRotationHelper.direction2Rotation(to.top(),from.top());
@@ -121,42 +124,42 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
     }
 
     //创建延申的piece的列表
-    public List<AATemJigsawPiece> createChildList(TemplateManager templateManager){
+    public List<AATemJigsawPiece> createChildList(StructureTemplateManager templateManager){
         if(start) this.checkBoundingBox();
         List<AATemJigsawPiece> list = new ArrayList<>();
         if(this.growth == 0) return list;
         //获取所有输出不为空的拼图方块信息
-        List<Template.BlockInfo> info =getJigsawBlocksInfo().stream().filter(i->!i.nbt.getString("target").equals("minecraft:empty") && !i.nbt.getString("target").equals("minecraft:") && !i.pos.equals(ignorePos)).collect(Collectors.toList());
+        List<StructureTemplate.StructureBlockInfo> info = getJigsawBlocksInfo().stream().filter(i -> i.nbt() != null && !i.nbt().getString("target").equals("minecraft:empty") && !i.nbt().getString("target").equals("minecraft:") && !i.pos().equals(ignorePos)).toList();
         //根据位置创建随机数
         Random r = PosHelper.posToRandom(templatePosition);
 
-        for(Template.BlockInfo i : info){
+        for(StructureTemplate.StructureBlockInfo i : info){
             //获取新的连接结构的路径
-            List<ResourceLocation> newResourceList = key2ElementMap.randomLocation(i.nbt.getString("target"),r,getTemJigsawElementRequireType());
+            List<ResourceLocation> newResourceList = key2ElementMap.randomLocation(i.nbt().getString("target"),r,getTemJigsawElementRequireType());
             if(newResourceList.isEmpty()) continue;
             newResourceList = newResourceList.subList(0,Math.min(Math.max(this.growth,4),newResourceList.size()));
             //获取发出方块的目标名
-            String targetName = i.nbt.getString("target");
+            String targetName = i.nbt().getString("target");
             if(tryAddPiece(templateManager, list, i, newResourceList, targetName,null))
                 tryAddPiece(templateManager,list,i,key2ElementMap.randomLocation(targetName,r,TemJigsawPieceElement.RequireType.END),targetName,null);
         }
         return list;
     }
 
-    private boolean tryAddPiece(TemplateManager templateManager, List<AATemJigsawPiece> list, Template.BlockInfo i, List<ResourceLocation> newResourceList, String targetName,Rotation rotation) {
+    private boolean tryAddPiece(StructureTemplateManager templateManager, List<AATemJigsawPiece> list, StructureTemplate.StructureBlockInfo i, List<ResourceLocation> newResourceList, String targetName,Rotation rotation) {
         for (ResourceLocation l : newResourceList) {
             //对于明确为empty的资源路径直接返回
             if(l.getPath().equals("empty")) return false;
             //通过发出方块位置与目标创建新片的目标方块理论对应位置
             BlockPos checkPos = getJigsawFrontPos(i);
-            Template newTemplate = key2ElementMap.getTemplate(templateManager,l);
+            StructureTemplate newTemplate = templateManager.getOrCreate(l);
             //获取目标中所有name与发出方块target相同的方块信息
-            List<Template.BlockInfo> targetJigsawInfo = ListAndMapHelper.disorganizeList(PosHelper.posToRandom(checkPos), newTemplate.filterBlocks(BlockPos.ZERO, new PlacementSettings(), Blocks.JIGSAW).stream().filter(t -> t.nbt.getString("name").equals(targetName)).collect(Collectors.toList()));
+            List<StructureTemplate.StructureBlockInfo> targetJigsawInfo = ListAndMapHelper.disorganizeList(PosHelper.posToRandom(checkPos), newTemplate.filterBlocks(BlockPos.ZERO, new StructurePlaceSettings(), Blocks.JIGSAW).stream().filter(t -> t.nbt().getString("name").equals(targetName)).collect(Collectors.toList()));
             if (targetJigsawInfo.isEmpty()) continue;
-            for (Template.BlockInfo targetInfo : targetJigsawInfo) {
+            for (StructureTemplate.StructureBlockInfo targetInfo : targetJigsawInfo) {
                 //根据数据获取旋转，生成点等信息
-                BlockPos spawnPos = checkPos.offset(-targetInfo.pos.getX(), -targetInfo.pos.getY(), -targetInfo.pos.getZ());
-                if(rotation==null) rotation = getJigsawInfoRotation(targetInfo,i,Rotation.getRandom(PosHelper.posToRandom(checkPos)));
+                BlockPos spawnPos = checkPos.offset(-targetInfo.pos().getX(), -targetInfo.pos().getY(), -targetInfo.pos().getZ());
+                if(rotation==null) rotation = getJigsawInfoRotation(targetInfo,i,Rotation.getRandom(new LegacyRandomSource(checkPos.asLong())));
                 if(rotation==null) continue;
 
                 //对于特定的片进行特殊处理。第一个参数为添加的list，第二个参数为是否进行范围箱
@@ -177,9 +180,9 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
                 Pair<Boolean,Integer> p = setChildGrowth(targetName,l);
 
                 //注：旋转轴坐标为相对坐标位置
-                if(!checkBoundingBox(newTemplate.getBoundingBox(spawnPos,rotation,targetInfo.pos, Mirror.NONE))) continue;
+                if(!checkBoundingBox(newTemplate.getBoundingBox(spawnPos,rotation,targetInfo.pos(), Mirror.NONE))) continue;
                 AATemJigsawPiece piece = createPiece().create(templateManager, l, spawnPos, rotation,
-                        targetInfo.pos,p.getFirst() ? p.getSecond() : this.growth - (shouldNotGrow(targetName,l) ? 0 : 1),
+                        targetInfo.pos(),p.getFirst() ? p.getSecond() : this.growth - (shouldNotGrow(targetName,l) ? 0 : 1),
                         checkPos,key2ElementMap,boundingBoxMap,targetName);
                 list.add(piece);
                 key2ElementMap.onResourceUse(targetName,l);
@@ -205,52 +208,43 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
     }
 
     //覆写生成流程
-    public boolean postProcess(ISeedReader iSeedReader, StructureManager structureManager, ChunkGenerator chunkGenerator, Random random, MutableBoundingBox box, ChunkPos chunkPos, BlockPos blockPos) {
+    public void postProcess(WorldGenLevel level, StructureManager structureManager, ChunkGenerator chunkGenerator, RandomSource random, BoundingBox box, ChunkPos chunkPos, BlockPos blockPos) {
         this.placeSettings.setBoundingBox(box);
         this.boundingBox = this.template.getBoundingBox(this.placeSettings, this.templatePosition);
-        if (this.template.placeInWorld(iSeedReader, this.templatePosition, blockPos, this.placeSettings, random, 2)) {
-            for(Template.BlockInfo template$blockinfo : this.template.filterBlocks(this.templatePosition, this.placeSettings, Blocks.STRUCTURE_BLOCK)) {
-                if (template$blockinfo.nbt != null) {
-                    StructureMode structuremode = StructureMode.valueOf(template$blockinfo.nbt.getString("mode"));
+        if (this.template.placeInWorld(level, this.templatePosition, blockPos, this.placeSettings, random, 2)) {
+            for(StructureTemplate.StructureBlockInfo info : this.template.filterBlocks(this.templatePosition, this.placeSettings, Blocks.STRUCTURE_BLOCK)) {
+                if (info.nbt() != null) {
+                    StructureMode structuremode = StructureMode.valueOf(info.nbt().getString("mode"));
                     if (structuremode == StructureMode.DATA) {
-                        this.handleDataMarker(template$blockinfo.nbt.getString("metadata"), template$blockinfo.pos, iSeedReader, random, box);
+                        this.handleDataMarker(info.nbt().getString("metadata"), info.pos(), level, random, box);
                     }
                 }
             }
 
-            for(Template.BlockInfo template$blockinfo1 : this.template.filterBlocks(this.templatePosition, this.placeSettings, Blocks.JIGSAW)) {
-                if (template$blockinfo1.nbt != null) {
-                    String s = template$blockinfo1.nbt.getString("final_state");
-                    BlockStateParser blockstateparser = new BlockStateParser(new StringReader(s), false);
+            for(StructureTemplate.StructureBlockInfo info : this.template.filterBlocks(this.templatePosition, this.placeSettings, Blocks.JIGSAW)) {
+                if (info.nbt() != null) {
+                    String s = info.nbt().getString("final_state");
                     BlockState blockstate = Blocks.AIR.defaultBlockState();
 
                     try {
-                        blockstateparser.parse(true);
-                        BlockState blockstate1 = blockstateparser.getState();
-                        if (blockstate1 != null) {
-                            blockstate = blockstate1;
-                        } else {
-                            LOGGER.error("Error while parsing blockstate {} in jigsaw block @ {}", s, template$blockinfo1.pos);
-                        }
+                        blockstate = BlockStateParser.parseForBlock(level.holderLookup(Registries.BLOCK), s, true).blockState();
                     } catch (CommandSyntaxException commandsyntaxexception) {
-                        LOGGER.error("Error while parsing blockstate {} in jigsaw block @ {}", s, template$blockinfo1.pos);
+                        LOGGER.error("Error while parsing blockstate {} in jigsaw block @ {}", s, info.pos());
                     }
 
-                    jigsawDataMarker(blockstate,template$blockinfo1.pos,iSeedReader,random,box);
+                    jigsawDataMarker(blockstate,info.pos(),level,random,box);
                 }
             }
         }
-
-        return true;
     }
 
     //对于拼图方块的额外处理
-    protected void jigsawDataMarker(BlockState defaultState, BlockPos pos, ISeedReader iSeedReader, Random random, MutableBoundingBox box){
+    protected void jigsawDataMarker(BlockState defaultState, BlockPos pos, WorldGenLevel iSeedReader, RandomSource random, BoundingBox box){
         iSeedReader.setBlock(pos, defaultState, 3);
-    };
+    }
 
     //此方法用于对特殊结构片进行处理，需要时override
-    public Pair<List<AATemJigsawPiece>,Boolean> specialPieceManager(TemplateManager manager,ResourceLocation resourceLocation,BlockPos connectPos,Template preparedTemplate,Template.BlockInfo jigsawInfo,BlockPos defaultSpawnPos,Rotation defaultRotation,Template.BlockInfo toJigsawInfo){
+    public Pair<List<AATemJigsawPiece>, Boolean> specialPieceManager(StructureTemplateManager manager, ResourceLocation resourceLocation, BlockPos connectPos, StructureTemplate preparedTemplate, StructureTemplate.StructureBlockInfo jigsawInfo, BlockPos defaultSpawnPos, Rotation defaultRotation, StructureTemplate.StructureBlockInfo toJigsawInfo) {
         return null;
 //        this.createPiece().create(manager,p.getFirst(),defaultSpawnPos,defaultRotation,PosHelper.posToRandom(connectPos),jigsawInfo.pos,p.getSecond(),connectPos,key2ElementMap,boundingBoxMap,jigsawInfo.nbt.getString("target"));
     }
@@ -265,18 +259,18 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
             return checkBoundingBox(piece.boundingBox);
 
         Pair<ChunkPos,ChunkPos> p = PosHelper.boundingBoxToChunkPos(piece.boundingBox);
-        List<ChunkPos> chunkList = ChunkPos.rangeClosed(p.getFirst(),p.getSecond()).collect(Collectors.toList());
+        List<ChunkPos> chunkList = ChunkPos.rangeClosed(p.getFirst(), p.getSecond()).toList();
         for(ChunkPos pos : chunkList)
             ListAndMapHelper.tryAddElementToMapList(boundingBoxMap,pos,piece.boundingBox);
         return true;
     }
 
-    private boolean checkBoundingBox(MutableBoundingBox box){
+    private boolean checkBoundingBox(BoundingBox box){
         Pair<ChunkPos,ChunkPos> p = PosHelper.boundingBoxToChunkPos(box);
-        List<ChunkPos> chunkList = ChunkPos.rangeClosed(p.getFirst(),p.getSecond()).collect(Collectors.toList());
+        List<ChunkPos> chunkList = ChunkPos.rangeClosed(p.getFirst(), p.getSecond()).toList();
         for (ChunkPos pos : chunkList) {
-            List<MutableBoundingBox> list = boundingBoxMap.getOrDefault(pos, Collections.EMPTY_LIST);
-            for (MutableBoundingBox inBox : list) {
+            List<BoundingBox> list = boundingBoxMap.getOrDefault(pos, Collections.EMPTY_LIST);
+            for (BoundingBox inBox : list) {
                 if (inBox.intersects(box)) return false;
             }
         }
@@ -293,36 +287,36 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
     }
 
     //检测拼图方块是否为可旋转
-    public static boolean isJigsawBlockRollable(Template.BlockInfo info){
-        return info.nbt.getString("joint").equals("rollable");
+    public static boolean isJigsawBlockRollable(StructureTemplate.StructureBlockInfo info){
+        return info.nbt().getString("joint").equals("rollable");
     }
     //获取拼图方块对应方向坐标
-    public static BlockPos getJigsawFrontPos(Template.BlockInfo info){
-        return info.pos.relative(info.state.getValue(BlockStateProperties.ORIENTATION).front());
+    public static BlockPos getJigsawFrontPos(StructureTemplate.StructureBlockInfo info){
+        return info.pos().relative(info.state().getValue(BlockStateProperties.ORIENTATION).front());
     }
 
     public abstract CreatePiece createPiece();
     public interface CreatePiece {
-        AATemJigsawPiece create(TemplateManager templateManager, ResourceLocation structurePlace,
+        AATemJigsawPiece create(StructureTemplateManager templateManager, ResourceLocation structurePlace,
                                 BlockPos addPos, Rotation rotation, BlockPos rotationPivotPoint,
-                                int growth,BlockPos ignorePos,MapNecessityTemJigsawPieceElement k2eMap,Map<ChunkPos,List<MutableBoundingBox>> bbMap,String generateFromKey);
+                                int growth,BlockPos ignorePos,MapNecessityTemJigsawPieceElement k2eMap,Map<ChunkPos,List<BoundingBox>> bbMap,String generateFromKey);
     }
-    private PlacementSettings getPlacementSetting(){
-        return placementSettingsAttach((new PlacementSettings()).setRotation(this.rotation).addProcessor(BlockIgnoreStructureProcessor.STRUCTURE_BLOCK).setRotationPivot(this.rotationPivotPos));
+    private StructurePlaceSettings getPlacementSetting(){
+        return placementSettingsAttach((new StructurePlaceSettings()).setRotation(this.rotation).addProcessor(BlockIgnoreProcessor.STRUCTURE_BLOCK).setRotationPivot(this.rotationPivotPos));
     }
 
-    public PlacementSettings placementSettingsAttach(PlacementSettings settings){
+    public StructurePlaceSettings placementSettingsAttach(StructurePlaceSettings settings){
         return settings;
     }
 
-    protected void handleDataMarker(String p_186175_1_, BlockPos p_186175_2_, IServerWorld p_186175_3_, Random p_186175_4_, MutableBoundingBox p_186175_5_) {
+    protected void handleDataMarker(String meta, BlockPos pos, ServerLevelAccessor levelAccessor, RandomSource randomSource, BoundingBox boundingBox) {
     }
 
     //    public abstract TemJigsawPieceElement getTemJigsawPieceElement();
     public abstract int limitGrowth();//到达此值后优先生成强制生成部分，随机 与 尾 分配概率相同
     public abstract int minGrowthAllow();//到达此值后开始生成 尾
     public List<ResourceLocation> getIgnoreBoundingBoxCheckList(){return Collections.EMPTY_LIST;}
-    public Map<ResourceLocation,PlacementSettings> getSpecialSettingMap(){return Collections.EMPTY_MAP;}
+    public Map<ResourceLocation,StructurePlaceSettings> getSpecialSettingMap(){return Collections.EMPTY_MAP;}
 
 
 //    public abstract Map<ChunkPos,MutableBoundingBox> boundingBoxMap();
@@ -332,13 +326,15 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
         private final Map<String,List<ResourceLocation>> random;
         private final Map<String,List<ResourceLocation>> necessity;
         private final Map<String,List<ResourceLocation>> end;
-        private final Map<ResourceLocation,Template> prepared_template_map;
         public TemJigsawPieceElement(Map<String,List<ResourceLocation>> randomPart, Map<String,List<ResourceLocation>> necessity, Map<String,List<ResourceLocation>> end){
-            this.random = randomPart == null ? new HashMap<>() : randomPart;
-            this.necessity = necessity == null ? new HashMap<>() : necessity;
-            this.end = end == null ? new HashMap<>() : end;
-            prepared_template_map = new HashMap<>();
+            this.random = orEmpty(randomPart);
+            this.necessity = orEmpty(necessity);
+            this.end = orEmpty(end);
         }
+
+        private Map<String,List<ResourceLocation>> orEmpty(Map<String,List<ResourceLocation>> map){
+            return map == null ? new HashMap<>() : map;
+        };
 
         public enum RequireType{
             NORMAL,
@@ -379,25 +375,6 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
             locations.addAll(necessity.getOrDefault(key,Collections.EMPTY_LIST));
             return locations;
         }
-
-        public void buildTemplateMap(TemplateManager manager){
-            end.forEach((key,list)->list.forEach((i)->{
-                if(!prepared_template_map.containsKey(i))
-                    prepared_template_map.put(i,manager.getOrCreate(i));
-            }));
-            random.forEach((key,list)->list.forEach((i)->{
-                if(!prepared_template_map.containsKey(i))
-                    prepared_template_map.put(i,manager.getOrCreate(i));
-            }));
-            necessity.forEach((key,list)->list.forEach((i)->{
-                if(!prepared_template_map.containsKey(i))
-                    prepared_template_map.put(i,manager.getOrCreate(i));
-            }));
-        }
-
-        public Template getTemplate(TemplateManager manager,ResourceLocation location){
-            return prepared_template_map.getOrDefault(location,manager.getOrCreate(location));
-        }
     }
 
     //特性：必要结构按照map对应存储
@@ -427,20 +404,14 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
             List<ResourceLocation> random = getRandomPart().getOrDefault(key,new ArrayList<>());
 
             if(end.isEmpty() && necessity.isEmpty() && random.isEmpty())
-                return Arrays.asList(new ResourceLocation(Utils.MOD_ID,"empty"));
-            switch (type){
-                case NECESSITY_FIRST:
-                    return ListAndMapHelper.disorganizeList(r,end,necessity,necessity,necessity,random);
-                case NORMAL:
-                    return ListAndMapHelper.disorganizeList(r,end,necessity,necessity,random,random);
-                case END:
-                    return ListAndMapHelper.disorganizeList(r,end);
-                case NECESSITY_IGNORE:
-                case END_IGNORE:
-                    return ListAndMapHelper.disorganizeList(r,necessity,random);
-                default:
-                    return Arrays.asList(new ResourceLocation(Utils.MOD_ID,"empty"));//TODO
-            }
+                return List.of(new ResourceLocation(Utils.MOD_ID, "empty"));
+            return switch (type) {
+                case NECESSITY_FIRST ->                 ListAndMapHelper.disorganizeList(r, end, necessity, necessity, necessity, random);
+                case NORMAL ->                          ListAndMapHelper.disorganizeList(r, end, necessity, necessity, random, random);
+                case END ->                             ListAndMapHelper.disorganizeList(r, end);
+                case NECESSITY_IGNORE, END_IGNORE ->    ListAndMapHelper.disorganizeList(r, necessity, random);
+//                default -> Arrays.asList(new ResourceLocation(Utils.MOD_ID, "empty"));//TODO
+            };
         }
 
         @Override
@@ -455,5 +426,14 @@ public abstract class AATemJigsawPiece extends TemplateStructurePiece {
         }
 
 
+    }
+
+    public static void iterateAATemJigsawPiece(StructurePiecesBuilder builder, AATemJigsawPiece piece, StructureTemplateManager manager){
+        builder.pieces.add(piece);
+        List<AATemJigsawPiece> childrenList = piece.createChildList(manager);
+        builder.pieces.addAll(childrenList);
+        if(!childrenList.isEmpty()){
+            childrenList.forEach((i)->iterateAATemJigsawPiece(builder,i,manager));
+        }
     }
 }
